--- a/buf.yaml
+++ b/buf.yaml
@@ -5,8 +5,7 @@ lint:
     - RPC_REQUEST_STANDARD_NAME
     - RPC_RESPONSE_STANDARD_NAME
     - RPC_REQUEST_RESPONSE_UNIQUE
-  ignore:
-    - bitcoin
+    - PACKAGE_VERSION_SUFFIX
   rpc_allow_google_protobuf_empty_requests: true
   rpc_allow_google_protobuf_empty_responses: true
 
