--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -1,5 +1,12 @@
 name: Integration tests
-on: [push]
+on:
+  pull_request:
+    branches:
+      - main
+      - 'release/*'
+  push:
+    branches:
+      - '*'
 jobs:
   build:
     name: Go CI
