--- a/buf.yaml
+++ b/buf.yaml
@@ -1,3 +1,8 @@
+version: v1beta1
+name: buf.build/LedgerHQ/bitcoin-keychain
+build:
+  roots:
+    - .
 lint:
   use:
     - DEFAULT
@@ -8,4 +13,6 @@ lint:
     - PACKAGE_VERSION_SUFFIX
   rpc_allow_google_protobuf_empty_requests: true
   rpc_allow_google_protobuf_empty_responses: true
-
+deps:
+    - buf.build/googleapis/googleapis
+    - buf.build/grpc-ecosystem/grpc-gateway
