--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -6,11 +6,17 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Checkout googleapis
+        uses: actions/checkout@v2
+        with:
+          repository: googleapis/googleapis
+          path: _deps/googleapis
       - name: Generate documentation
-        uses: LedgerHQ/proto-gendoc-action@v0.1.0
+        uses: LedgerHQ/proto-gendoc-action@v1
         with:
           api-name: Bitcoin Keychain
           api-version: 1.0.0
           proto-root-dir: ./pb
+          proto-include-dir: _deps/googleapis
       - name: Print documentation
         run: cat openapi.yaml
